# Datasets

UIC_GRADES/: .gitignore
UIC_GRADES/data/fall2023/: fall2023_all.csv  fall2023_arch.csv  fall2023_engr.csv  fall2023_las.csv
UIC_GRADES/data/gened/: Analyzing the Natural World.csv  Exploring World Cultures.csv  Understanding U.S. Society.csv  Understanding the Creative Arts.csv  Understanding the Individual and Society.csv  Understanding the Past.csv  geneds_all.csv  splitter.py
UIC_GRADES/src/: pyproject.toml
UIC_GRADES/src/src/: __init__.py
UIC_GRADES/src/uic_grades/: manage.py
UIC_GRADES/src/uic_grades/courses/: urls.py  views.py
UIC_GRADES/src/uic_grades/courses/templates/: course_list.html
UIC_GRADES/src/uic_grades/uic_grades/: asgi.py  settings.py  urls.py  wsgi.py
