[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["seyfal <seyfal.sutanov123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.13"
plotly = "^5.22.0"
pandas = "^2.2.2"
flask = "^3.0.3"
flask-cors = "^4.0.1"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
